chore: fix zoom in on iphones (#4)

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,15 @@
 @import 'primeng/resources/themes/lara-light-blue/theme.css';
 @import 'primeng/resources/primeng.css';
 @import 'primeicons/primeicons.css';
+
+html {
+  font-size: 16px;
+}
+
+body {
+  font-size: 1rem;
+}
+
+* {
+  font-size: min(16px, 1rem);
+}
